--- a/index.html
+++ b/index.html
@@ -7,24 +7,24 @@
 
         <title>Adalab</title>
 
-        <link type="text/css" rel="stylesheet" href="./styles/main.css">
         <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet" />
+        <link type="text/css" rel="stylesheet" href="./styles/main.css">
 
     </head>
 
     <body>
         <header class="header">
-            <div class="logo"><a href="#"><img src="./img/adalab-logo.png" alt="Adalab logo"></a></div>
+            <div class="logo"><a title="Ir al inicio" href="#"><img src="./img/adalab-logo.png" alt="Adalab logo" title="Adalab logo"></a></div>
             <nav class="main-menu">
                 <ul class="main-menu-ul">
-                    <li class="main-menu-li"><a href="#">Blog</a></li>
-                    <li class="main-menu-li"><a href="#">Contacto</a></li>
+                    <li class="main-menu-li"><a title="Ir al blog" href="#">Blog</a></li>
+                    <li class="main-menu-li"><a title="Ir a contacto" href="#">Contacto</a></li>
                 </ul>
             </nav>
         </header>
 
         <main class="main-content">
-            <h1 class="title">Creando<br> Diversidad<br> Digital</h1>
+            <h1 class="title">Creando<br> diversidad<br> digital</h1>
         </main>
     </body>
 
